@@ -24,11 +24,17 @@
 	$page["file"] = "audit.php";
 	show_header($page["title"],1,0);
 ?>
-
+<?php
+	if(!check_anyright("Configuration of Zabbix","R"))
+	{
+		show_table_header("<font color=\"AA0000\">".S_NO_PERMISSIONS."</font>");
+		show_page_footer();
+		exit;
+	}
+?>
 <?php
 	update_profile("web.menu.config.last",$page["file"]);
 ?>
-
 <?php
 	if(isset($_REQUEST["start"])&&isset($_REQUEST["prev"]))
 	{
