@@ -38,6 +38,12 @@
 		show_header($page["title"],0,$nomenu);
 	}
 
+	if(!check_anyright("Host","U"))
+	{
+		show_table_header("<font color=\"AA0000\">".S_NO_PERMISSIONS."</font>");
+		show_page_footer();
+		exit;
+	}
 ?>
 <?php
 //		VAR			TYPE	OPTIONAL FLAGS	VALIDATION	EXCEPTION
