@@ -24,7 +24,14 @@
 	$page["file"] = "report1.php";
 	show_header($page["title"],0,0);
 ?>
-
+<?php
+        if(!check_anyright("Default permission","R"))
+        {
+                show_table_header("<font color=\"AA0000\">".S_NO_PERMISSIONS."</font>");
+                show_page_footer();
+                exit;
+        }
+?>
 <?php
 	update_profile("web.menu.reports.last",$page["file"]);
 ?>
